--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,6 +28,6 @@
     "**/*.tsx",
     ".next/types/**/*.ts",
     "src/data/genericDataSet.js"
-  ],
+, "public/robot.tst"  ],
   "exclude": ["node_modules"]
 }
